Setting up reports

--- a/TermProject/TermProject/Views/Home/AdminPanel.cshtml
+++ b/TermProject/TermProject/Views/Home/AdminPanel.cshtml
@@ -63,7 +63,7 @@
 
 
                         <div class="form-group mb-0">
-                            <button type="submit" class="btn south-btn">Manage Products</button>
+                            <button type="submit" class="btn south-btn"><a href="~/Category/Create">Manage Categories</button>
                         </div>
                     </div>
                 </div>
@@ -84,7 +84,7 @@
 
 
                         <div class="form-group mb-0">
-                            <button type="submit" class="btn south-btn"><a href="ManageSpecs.html">Manage Specs</a></button>
+                            <button type="submit" class="btn south-btn"><a href="~/Home/ManageSpecs">Manage Specs</a></button>
                         </div>
                     </div>
                 </div>
