--- a/TermProject/TermProject/Views/BackCamera/Create.cshtml
+++ b/TermProject/TermProject/Views/BackCamera/Create.cshtml
@@ -10,7 +10,7 @@
         <div class="row h-100 align-items-center">
             <div class="col-12">
                 <div class="breadcumb-content">
-                    <h3 class="breadcumb-title">ADMIN-PANEL</h3>
+                    <h3 class="breadcumb-title">ADMIN-PANEL | Add Back Camera</h3>
                 </div>
             </div>
         </div>
@@ -18,41 +18,34 @@
 </section>
 <section class="south-contact-area section-padding-100">
     <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <div class="contact-heading">
-                    <h6>Manage Specs</h6>
-                </div>
-            </div>
-        </div>
-
+      
         <div class="row">
             <div class="col-12 col-lg-4">
                 <div class="content-sidebar">
                     <!-- Office Hours -->
                     <div class="form-group mb-0">
-                        <button type="submit" class="btn south-btn"> <a href="cam.html">Camera</a></button>
+                        <button type="submit" class="btn south-btn"> <a href="~/BackCamera/Create">Back Camera</a></button>
                     </div>
                     <div class="form-group mb-0">
-                        <button type="submit" class="btn south-btn"> <a href="build.html">Build</a></button>
+                        <button type="submit" class="btn south-btn"> <a href="~/FrontCamera/Create">Front Camera</button>
                     </div>
                     <div class="form-group mb-0">
-                        <button type="submit" class="btn south-btn"> <a href="frequency.html">Frequency</a></button>
+                        <button type="submit" class="btn south-btn"> <a href="~/Connectivity/Create">Connectivity</button>
                     </div>
                     <div class="form-group mb-0">
-                        <button type="submit" class="btn south-btn"> <a href="connectivity.html">Connectivity</a></button>
+                        <button type="submit" class="btn south-btn"> <a href="~/Display/Create">Display</a></button>
                     </div>
                     <div class="form-group mb-0">
-                        <button type="submit" class="btn south-btn"> <a href="processor.html">Processor</a></button>
+                        <button type="submit" class="btn south-btn"><a href="~/RAM/Create">RAM</a></button>
                     </div>
                     <div class="form-group mb-0">
-                        <button type="submit" class="btn south-btn"> <a href="display.html">Dispaly</a></button>
+                        <button type="submit" class="btn south-btn"> <a href="~/OperatinSystem/Create">OS</a></button>
                     </div>
                     <div class="form-group mb-0">
-                        <button type="submit" class="btn south-btn"> <a href="features.html">Features</a></button>
+                        <button type="submit" class="btn south-btn"> <a href="~/ROM/Create">Processor</a></button>
                     </div>
                     <div class="form-group mb-0">
-                        <button type="submit" class="btn south-btn"> <a href="specs.html">Specs</a></button>
+                        <button type="submit" class="btn south-btn"> <a href="~/Category/Create">Specs</a></button>
                     </div>
                 </div>
             </div>
@@ -72,7 +65,7 @@
                                         <div class="form-group">
 
                                             <div class="col-md-10">
-                                                @Html.EditorFor(model => model.Pixel, new { htmlAttributes = new { @class = "form-control", placeholder = "Pixel" } })
+                                                @Html.EditorFor(model => model.Pixel, new { htmlAttributes = new { @class = "form-control", placeholder = "Pixel", style = "width:450px;" } })
                                                 @Html.ValidationMessageFor(model => model.Pixel, "", new { @class = "text-danger" })
                                             </div>
                                         </div>
@@ -84,14 +77,17 @@
                                         </div>
                                     </div>
                                 </div>
-                                </div>
-                           </div>
-                        </div>
-                    </div>
-                                }
                             </div>
                         </div>
-</section>
-            <div>
-                @Html.ActionLink("Back to List", "Index")
+                    </div>
+                </div>
+            }
+            <div class="form-group mb-0">
+                <button class="btn south-btn"> <a href="~/BackCamera/index">Show All</a></button>
             </div>
+        </div>
+
+                        </div>
+   
+</section>
+   
