--- a/TermProject/TermProject/Views/BackCamera/Delete.cshtml
+++ b/TermProject/TermProject/Views/BackCamera/Delete.cshtml
@@ -5,7 +5,17 @@
     Layout = "~/Views/Shared/_Theme.cshtml";
 }
 
-<h2>Delete</h2>
+<section class="breadcumb-area bg-img" style="background-image: url(/../img/bg-img/hero1-01.jpg);">
+    <div class="container h-100">
+        <div class="row h-100 align-items-center">
+            <div class="col-12">
+                <div class="breadcumb-content">
+                    <h3 class="breadcumb-title">ADMIN-PANEL</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
