--- a/TermProject/TermProject/Views/Category/Create.cshtml
+++ b/TermProject/TermProject/Views/Category/Create.cshtml
@@ -4,49 +4,106 @@
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_Theme.cshtml";
 }
-
-<h2>Create</h2>
-
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>CategoryViewModel</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.manufacturer, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.manufacturer, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.manufacturer, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Add_Date, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Add_Date, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Add_Date, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Update_Date, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Update_Date, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Update_Date, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+<section class="breadcumb-area bg-img" style="background-image: url(/../img/bg-img/hero1-01.jpg);">
+    <div class="container h-100">
+        <div class="row h-100 align-items-center">
+            <div class="col-12">
+                <div class="breadcumb-content">
+                    <h3 class="breadcumb-title">ADMIN-PANEL | Add Category</h3>
+                </div>
             </div>
         </div>
     </div>
-}
+</section>
+<section class="south-contact-area section-padding-100">
+    <div class="container">
+        
+    
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+        <div class="row">
+            <div class="col-12 col-lg-4">
+                <div class="content-sidebar">
+                    <!-- Office Hours -->
+                    <div class="form-group mb-0">
+                        <button type="submit" class="btn south-btn"> <a href="~/BackCamera/Create">Back Camera</a></button>
+                    </div>
+                    <div class="form-group mb-0">
+                        <button type="submit" class="btn south-btn"> <a href="~/FrontCamera/Create">Front Camera</button>
+                    </div>
+                    <div class="form-group mb-0">
+                        <button type="submit" class="btn south-btn"> <a href="~/Connectivity/Create">Connectivity</button>
+                    </div>
+                    <div class="form-group mb-0">
+                        <button type="submit" class="btn south-btn"> <a href="~/Display/Create">Display</a></button>
+                    </div>
+                    <div class="form-group mb-0">
+                        <button type="submit" class="btn south-btn"><a href="~/RAM/Create">RAM</a></button>
+                    </div>
+                    <div class="form-group mb-0">
+                        <button type="submit" class="btn south-btn"> <a href="~/OperatinSystem/Create">OS</a></button>
+                    </div>
+                    <div class="form-group mb-0">
+                        <button type="submit" class="btn south-btn"> <a href="~/ROM/Create">Processor</a></button>
+                    </div>
+                    <div class="form-group mb-0">
+                        <button type="submit" class="btn south-btn"> <a href="~/Category/Create">Create</a></button>
+                    </div>
+                </div>
+            </div>
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+                <div class="col-12 col-lg-12">
+                    <div class="contact-form">
+                        <div class="col-12  ">
+                            <div class="single-featured-property mb-50 wow fadeInUp" data-wow-delay="100ms">
+                                <div class="property-content">
+                                    <div class="form-horizontal">
+                                        <div class="form-horizontal">
+
+                                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                            <div class="form-group">
+                                                <div class="col-md-10">
+                                                    @Html.EditorFor(model => model.manufacturer, new { htmlAttributes = new { @class = "form-control", placeholder = "Manufacturer", style = "width:450px;" } })
+                                                    @Html.ValidationMessageFor(model => model.manufacturer, "", new { @class = "text-danger" })
+                                                </div>
+                                            </div>
+
+                                            <div class="form-group">
+
+                                                <div class="col-md-10">
+                                                    @Html.EditorFor(model => model.Add_Date, new { htmlAttributes = new { @class = "form-control", placeholder = "Add Date", style = "width:450px;" } })
+                                                    @Html.ValidationMessageFor(model => model.Add_Date, "", new { @class = "text-danger" })
+                                                </div>
+                                            </div>
+
+                                            <div class="form-group">
+
+                                                <div class="col-md-10">
+                                                    @Html.EditorFor(model => model.Update_Date, new { htmlAttributes = new { @class = "form-control", placeholder = "Update Date", style = "width:450px;" } })
+                                                    @Html.ValidationMessageFor(model => model.Update_Date, "", new { @class = "text-danger" })
+                                                </div>
+                                            </div>
+
+                                            <div class="form-group">
+                                                <div class="col-md-offset-2 col-md-10">
+                                                    <button type="submit" class="btn south-btn"> Add</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            }
+            <div class="form-group mb-0">
+                <button class="btn south-btn"> <a href="~/Category/index">Show All</a></button>
+            </div>
+        </div>
+
+                    </div>
+                    </section>
+                   
