--- a/TermProject/TermProject/Views/Category/Index.cshtml
+++ b/TermProject/TermProject/Views/Category/Index.cshtml
@@ -5,42 +5,100 @@
     Layout = "~/Views/Shared/_Theme.cshtml";
 }
 
-<h2>Index</h2>
+<section class="breadcumb-area bg-img" style="background-image: url(/../img/bg-img/hero1-01.jpg);">
+    <div class="container h-100">
+        <div class="row h-100 align-items-center">
+            <div class="col-12">
+                <div class="breadcumb-content">
+                    <h3 class="breadcumb-title">ADMIN-PANEL | Show List</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="south-contact-area section-padding-100">
+    <div class="container">
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.manufacturer)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Add_Date)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Update_Date)
-        </th>
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.manufacturer)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Add_Date)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Update_Date)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id })
-        </td>
-    </tr>
-}
 
-</table>
+        <div class="row">
+            <div class="col-12 col-lg-4">
+                <div class="content-sidebar">
+                    <!-- Office Hours -->
+                    <div class="form-group mb-0">
+                        <button type="submit" class="btn south-btn"> <a href="~/BackCamera/Create">Back Camera</a></button>
+                    </div>
+                    <div class="form-group mb-0">
+                        <button type="submit" class="btn south-btn"> <a href="~/FrontCamera/Create">Front Camera</button>
+                    </div>
+                    <div class="form-group mb-0">
+                        <button type="submit" class="btn south-btn"> <a href="~/Connectivity/Create">Connectivity</button>
+                    </div>
+                    <div class="form-group mb-0">
+                        <button type="submit" class="btn south-btn"> <a href="~/Display/Create">Display</a></button>
+                    </div>
+                    <div class="form-group mb-0">
+                        <button type="submit" class="btn south-btn"><a href="~/RAM/Create">RAM</a></button>
+                    </div>
+                    <div class="form-group mb-0">
+                        <button type="submit" class="btn south-btn"> <a href="~/OperatinSystem/Create">OS</a></button>
+                    </div>
+                    <div class="form-group mb-0">
+                        <button type="submit" class="btn south-btn"> <a href="~/ROM/Create">Processor</a></button>
+                    </div>
+                    <div class="form-group mb-0">
+                        <button type="submit" class="btn south-btn"> <a href="~/Category/Create">Category</a></button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-lg-8">
+                <div class="contact-form">
+                    <div class="col-12  ">
+                        <div class="single-featured-property mb-50 wow fadeInUp" data-wow-delay="100ms">
+                            <div class="property-content">
+                                <div class="form-horizontal">
+                                    <table class="table">
+                                        <tr>
+                                            <th>
+                                                @Html.DisplayNameFor(model => model.manufacturer)
+                                            </th>
+                                            <th>
+                                                @Html.DisplayNameFor(model => model.Add_Date)
+                                            </th>
+                                            <th>
+                                                @Html.DisplayNameFor(model => model.Update_Date)
+                                            </th>
+                                            <th></th>
+                                        </tr>
+
+                                        @foreach (var item in Model)
+                                        {
+                                            <tr>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.manufacturer)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.Add_Date)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.Update_Date)
+                                                </td>
+                                                <td>
+                                                    @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
+                                                    @Html.ActionLink("Details", "Details", new { id = item.id }) |
+                                                    @Html.ActionLink("Delete", "Delete", new { id = item.id })
+                                                </td>
+                                            </tr>
+                                        }
+
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
