--- a/TermProject/TermProject/Views/RAM/Edit.cshtml
+++ b/TermProject/TermProject/Views/RAM/Edit.cshtml
@@ -5,34 +5,88 @@
     Layout = "~/Views/Shared/_Theme.cshtml";
 }
 
-<h2>Edit</h2>
-
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>RamViewModel</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.id)
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Capacity, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Capacity, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Capacity, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+<section class="breadcumb-area bg-img" style="background-image: url(/../img/bg-img/hero1-01.jpg);">
+    <div class="container h-100">
+        <div class="row h-100 align-items-center">
+            <div class="col-12">
+                <div class="breadcumb-content">
+                    <h3 class="breadcumb-title">ADMIN-PANEL| Edit RAM</h3>
+                </div>
             </div>
         </div>
     </div>
-}
+</section>
+<section class="south-contact-area section-padding-100">
+    <div class="container">
+     
+        </div>
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+        <div class="row">
+            <div class="col-12 col-lg-4">
+                <div class="content-sidebar">
+                    <!-- Office Hours -->
+                    <div class="form-group mb-0">
+                        <button type="submit" class="btn south-btn"> <a href="~/BackCamera/Create">Back Camera</a></button>
+                    </div>
+                    <div class="form-group mb-0">
+                        <button type="submit" class="btn south-btn"> <a href="~/FrontCamera/Create">Front Camera</button>
+                    </div>
+                    <div class="form-group mb-0">
+                        <button type="submit" class="btn south-btn"> <a href="~/Connectivity/Create">Connectivity</button>
+                    </div>
+                    <div class="form-group mb-0">
+                        <button type="submit" class="btn south-btn"> <a href="~/Display/Create">Display</a></button>
+                    </div>
+                    <div class="form-group mb-0">
+                        <button type="submit" class="btn south-btn"><a href="~/RAM/Create">RAM</a></button>
+                    </div>
+                    <div class="form-group mb-0">
+                        <button type="submit" class="btn south-btn"> <a href="~/OperatinSystem/Create">OS</a></button>
+                    </div>
+                    <div class="form-group mb-0">
+                        <button type="submit" class="btn south-btn"> <a href="~/ROM/Create">Processor</a></button>
+                    </div>
+                    <div class="form-group mb-0">
+                        <button type="submit" class="btn south-btn"> <a href="specs.html">Specs</a></button>
+                    </div>
+                </div>
+            </div>
+            @using (Html.BeginForm())
+            {
+
+                @Html.AntiForgeryToken()
+                <div class="col-12 col-lg-12">
+                    <div class="contact-form">
+                        <div class="col-12  ">
+                            <div class="single-featured-property mb-50 wow fadeInUp" data-wow-delay="100ms">
+                                <div class="property-content">
+                                    <div class="form-horizontal">
+                                        <div class="form-horizontal">
+
+                                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                            @Html.HiddenFor(model => model.id)
+
+                                            <div class="form-group">
+                                                <div class="col-md-10">
+                                                    @Html.EditorFor(model => model.Capacity, new { htmlAttributes = new { @class = "form-control", placeholder = "Capacity", style = "width:450px;" } })
+                                                    @Html.ValidationMessageFor(model => model.Capacity, "", new { @class = "text-danger" })
+                                                </div>
+                                            </div>
+
+                                            <div class="form-group">
+                                                <div class="col-md-offset-2 col-md-10">
+                                                    <button type="submit" class="btn south-btn">Edit</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+</section>
+
